--- a/servlets/pom.xml
+++ b/servlets/pom.xml
@@ -55,6 +55,11 @@
             <version>2.8.6</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.39</version>
+        </dependency>
     </dependencies>
 
 </project>
